[project]
name = "pokemon-mcp-server"
version = "1.0.0"
description = "Pokémon Battle Simulation MCP Server"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Pokémon MCP Developer" }]
keywords = ["pokemon", "mcp", "battle", "simulation", "llm"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.1",
    "pydantic>=2.11.0,<3.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "C4",    # flake8-comprehensions
    "E",     # pycodestyle
    "F",     # pyflakes
    "I",     # isort
    "PL",    # Pylint
    "UP",    # pyupgrade
]
